--- a/config/config.css
+++ b/config/config.css
@@ -7,6 +7,14 @@
 }
 
 .mandator-0-warning,
+.mandator-0-toolbar,
 .mandator-0:before {
     background-color: pink;
+}
+
+.mandator-2-warning,
+.mandator-2-toolbar,
+.mandator-2:before {
+    background-color: pink;
+    color: black;
 }
