refined the permission to edit and the warning

--- a/js/templates/treatment.tpl.html
+++ b/js/templates/treatment.tpl.html
@@ -1,5 +1,3 @@
-<pre>{{permissionToEdit}}</pre>
-<pre>{{warning}}</pre>
 <div class="col-xs-12 treatment mandator-{{treatment.mandator}}"
      ng-class="{secondary: !treatment.isMainTreatment, closed: treatment.closed || treatment.billed}" tabindex="-1">
 <div class="panel" ng-class="treatment.type=='success' ? 'panel-success' : 'panel-default'">
@@ -248,8 +246,8 @@
     <ul class="list-group">
         <treatment-entry entry="entry" editable="{{editable}}" treatment-id="{{treatment.id}}"
                          ng-repeat="entry in treatment.entries | orderBy:'type.name'"
-                        permission-to-edit="{{permissionToEdit}}"
-                        warning="{{warning}}">
+                        permission-to-edit="dc.permissionToEdit"
+                        warning="dc.warning">
         </treatment-entry>
         <li class="list-group-item" ng-show="treatment.focused">
             <div class="row">
