--- a/js/templates/treatment-entry.tpl.html
+++ b/js/templates/treatment-entry.tpl.html
@@ -10,11 +10,10 @@
             <form name="entryform">
                 <div class="row" treatment-row ng-repeat="row in entry.rows | orderBy:'id'" ng-class="{locked: row.locked}" ng-hide="row.deleted">
                     <span class="label locked-warning" ng-class="'mandator-' + row.lockedBy.id + '-warning'" ng-show="row.locked">Gesperrt von {{row.lockedBy.name}}</span>
-
                     <treatment-column ng-repeat="column in row.columns" content="column.content"
                                       width="{{column.width}}" unique-id="{{row.id}}-{{$index}}"
-                                      editable="{{editable}}" treatment-id="{{treatmentId}}" warning="{{warning}}"
-                                      readonly="{{column.readonly || permissionToEdit!='true'}}" parent="entry" row="row"></treatment-column>
+                                      editable="{{editable}}" treatment-id="{{treatmentId}}" warning="warning"
+                                      readonly="{{column.readonly || !permissionToEdit()}}" parent="entry" row="row"></treatment-column>
                 </div>
             </form>
         </div>
