--- a/js/templates/treatment-entry.tpl.html
+++ b/js/templates/treatment-entry.tpl.html
@@ -13,7 +13,7 @@
                     <treatment-column ng-repeat="column in row.columns" content="column.content"
                                       width="{{column.width}}" unique-id="{{row.id}}-{{$index}}"
                                       editable="{{editable}}" treatment-id="{{treatmentId}}" warning="warning"
-                                      readonly="{{column.readonly || !permissionToEdit()}}" parent="entry" row="row"></treatment-column>
+                                      readonly="column.readonly || !permissionToEdit()" parent="entry" row="row"></treatment-column>
                 </div>
             </form>
         </div>
