--- a/js/templates/treatment-entry.tpl.html
+++ b/js/templates/treatment-entry.tpl.html
@@ -1,4 +1,11 @@
-<li class="list-group-item">
+<li class="list-group-item treatment-entry">
+    <div class="editor-toolbar" ng-show="entry.focused">
+        <div class="row">
+            <div class="col-xs-9 col-xs-offset-3">
+                <text-angular-toolbar name="toolbar-{{entry.treatmentId}}-{{entry.type.id}}"></text-angular-toolbar>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-xs-4 col-sm-3 col-lg-2">
             <div class="form-group">
@@ -17,13 +24,6 @@
                                       readonly="column.readonly || !permissionToEdit()" parent="entry" row="row"></treatment-column>
                 </div>
             </form>
-        </div>
-    </div>
-</li>
-<li class="list-group-item" ng-show="entry.focused">
-    <div class="row">
-        <div class="col-xs-9 col-xs-offset-3">
-            <text-angular-toolbar name="toolbar-{{entry.treatmentId}}-{{entry.type.id}}"></text-angular-toolbar>
         </div>
     </div>
 </li>
