--- a/js/templates/treatment-entry.tpl.html
+++ b/js/templates/treatment-entry.tpl.html
@@ -1,7 +1,7 @@
 <li class="list-group-item treatment-entry">
     <div class="editor-toolbar" ng-show="entry.focused">
         <div class="row">
-            <div class="col-xs-9 col-xs-offset-3">
+            <div class="col-xs-12">
                 <text-angular-toolbar name="toolbar-{{entry.treatmentId}}-{{entry.type.id}}"></text-angular-toolbar>
             </div>
         </div>
