--- a/css/custom.css
+++ b/css/custom.css
@@ -441,7 +441,7 @@ span.checkmark {
 .editor-toolbar {
     position: absolute;
     position: absolute;
-    width: 50%;
+    width: 530px;
     right: 15px;
     z-index: 90;
     bottom: -25px;
