--- a/css/custom.css
+++ b/css/custom.css
@@ -440,7 +440,6 @@ span.checkmark {
 
 .editor-toolbar {
     position: absolute;
-    position: absolute;
     width: 530px;
     right: 15px;
     z-index: 90;
@@ -457,4 +456,12 @@ span.checkmark {
     top: 50px;
     right: 15px;
     z-index: 95;
+    height: 80%;
+    box-sizing: border-box;
+    padding: 15px 0;
+}
+
+.title-settings-widget .panel{
+    overflow-y: auto;
+    max-height: 100%;
 }
