--- a/js/templates/treatment-entry.tpl.html
+++ b/js/templates/treatment-entry.tpl.html
@@ -1,4 +1,4 @@
-<li class="list-group-item treatment-entry">
+<li class="list-group-item treatment-entry" ng-hide="dc.isHidden(entry.type)">
     <div class="editor-toolbar" ng-show="entry.focused">
         <div class="row">
             <div class="col-xs-12">
