--- a/js/templates/fixtext-widget.tpl.html
+++ b/js/templates/fixtext-widget.tpl.html
@@ -4,8 +4,8 @@
         <div class="panel-heading">
             Fixtexte
             <div class="btn-group widget-controls">
-                <a class="btn btn-danger close-widget" ng-click="dc.showWidget(false)"><i class="fa fa-close"></i></a>
-                <a class="btn btn-success confirm-widget" ng-click="dc.showSelection(dc.selectedText)"><i class="fa fa-check"></i></a>
+                <a class="btn close-widget" ng-click="dc.showWidget(false)">&nbsp;</i></a>
+                <a class="btn confirm-widget" ng-click="dc.showSelection(dc.selectedText)">&nbsp;</a>
             </div>
         </div>
         <div class="panel-body">
