--- a/js/templates/title-settings-widget.tpl.html
+++ b/js/templates/title-settings-widget.tpl.html
@@ -4,7 +4,7 @@
             Titel anzeigen
             <div class="btn-group widget-controls">
                 <!--<a class="btn btn-danger close-widget" ng-click="dc.showWidget(false)"><i class="fa fa-close"></i></a>-->
-                <a class="btn btn-success confirm-widget" ng-click="dc.showWidget(false)"><i class="fa fa-check"></i></a>
+                <a class="btn confirm-widget" ng-click="dc.showWidget(false)">&nbsp;</a>
             </div>
         </div>
         <div class="panel-body">
