--- a/js/templates/fixtext-widget.tpl.html
+++ b/js/templates/fixtext-widget.tpl.html
@@ -5,7 +5,7 @@
             Fixtexte
             <div class="btn-group widget-controls">
                 <a class="btn close-widget" ng-click="dc.showWidget(false)">&nbsp;</i></a>
-                <a class="btn confirm-widget" ng-click="dc.showSelection(dc.selectedText)">&nbsp;</a>
+                <a class="btn confirm-widget" ng-click="dc.insertSelection(dc.selectedText)">&nbsp;</a>
             </div>
         </div>
         <div class="panel-body">
