--- a/js/templates/treatment-entry.tpl.html
+++ b/js/templates/treatment-entry.tpl.html
@@ -29,7 +29,7 @@
                                       width="{{column.width}}" unique-id="{{row.id}}-{{$index}}"
                                       editable="{{editable}}" treatment="treatment" warning="warning"
                                       type="entry.type" entry="entry"
-                                      readonly="column.readonly || !permissionToEdit()" parent="entry" row="row"></treatment-column>
+                                      readonly="column.readonly || !permissionToEdit()" row="row"></treatment-column>
                 </div>
             </form>
         </div>
